--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<section class="modal-outer">
 
   <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()" class="add-edit-user-modal-form common-dg">
     <div class="modal-header">
@@ -8,114 +8,117 @@
       </button>
     </div>
 
-    <div class="modal-body">
+    <div mat-dialog-content>
 
-      <div class="row">
-        <!-- First Name -->
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <mat-form-field class="border-input add-first-name add-edit-user-form-modal">
-            <input matInput type="text" placeholder="First Name" formControlName="firstName" required />
-            <mat-error class="mat-error-add-edit-form-modal">First Name is Required</mat-error>
-          </mat-form-field>
+      <div class="modal-body">
+
+        <div class="row">
+          <!-- First Name -->
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <mat-form-field class="border-input add-first-name add-edit-user-form-modal">
+              <input matInput type="text" placeholder="First Name" formControlName="firstName" required />
+              <mat-error class="mat-error-add-edit-form-modal">First Name is Required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <!-- Last Name -->
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <mat-form-field class="border-input add-last-name add-edit-user-form-modal">
+              <input matInput type="text" placeholder="Last Name" formControlName="lastName" required />
+              <mat-error class="mat-error-add-edit-form-modal">Last Name is Required</mat-error>
+            </mat-form-field>
+          </div>
+
+          <!-- Email Address -->
+          <div class="col-md-12 col-sm-12 col-xs-12">
+            <mat-form-field class="border-input add-edit-user-form-modal">
+              <input matInput type="text" placeholder="Email Id" formControlName="email" (input)="verifyEmail($event)"
+                required />
+              <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
+                class="form-error-msg"> Email is required </small>
+              <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
+                class="form-error-msg"> Enter Valid Email</small>
+              <small class="form-error-msg" *ngIf="(!emailVerified)">Email already in use.</small>
+            </mat-form-field>
+          </div>
+
+          <!-- Phone Number and Code -->
+          <div class="col-md-3 col-sm-4 col-xs-5">
+            <mat-form-field class="border-select mat-form-field-flex-mm-padding">
+              <mat-select formControlName="countriesList">
+                <div class="display-flex">
+                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
+                    [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
+                    (keydown)="$event.stopPropagation()" />
+                  <button mat-button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                  </button>
+                </div>
+                <mat-select-trigger>
+                  <span
+                    matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
+                      class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
+                    <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
+                    <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
+                  </span>
+                </mat-select-trigger>
+                <mat-option
+                  *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
+                  [value]="country" selected="trade.isAttatched"><span><img class="width17Percent p-r-10"
+                      [src]="country.imageUrl" alt="" />
+                    <span matTooltip="{{ country.name }}"
+                      class="limited-character universal p-r-5">{{ country.name }}</span>
+                    <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
+                  </span>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <!-- Phone Number -->
+          <div class="col-md-9 col-sm-8 col-xs-7">
+            <mat-form-field class="border-input add-edit-user-form-modal">
+              <input matInput type="text" placeholder="Phone No" formControlName="contactNo" />
+              <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
+                class="form-error-msg"> Enter Valid Phone No</small>
+            </mat-form-field>
+          </div>
+
+          <!-- Role Field -->
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <mat-form-field class="border-select user-role-field add-edit-user-form-modal">
+              <mat-label>Role *</mat-label>
+              <mat-select formControlName="roleId">
+                <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
+                  {{role.roleDescription}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+
+          <!-- Project Dropdown Field -->
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <mat-form-field class="border-select projects-field add-edit-user-form-modal">
+              <mat-label>Project</mat-label>
+              <mat-select formControlName="projectIds" multiple>
+                <mat-option *ngFor="let project of allProjects" [value]="project.projectId">{{project.projectName}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
         </div>
 
-        <!-- Last Name -->
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <mat-form-field class="border-input add-edit-user-form-modal">
-            <input matInput type="text" placeholder="Last Name" formControlName="lastName" required />
-            <mat-error class="mat-error-add-edit-form-modal">Last Name is Required</mat-error>
-          </mat-form-field>
-        </div>
-
-        <!-- Email Address -->
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <mat-form-field class="border-input add-edit-user-form-modal">
-            <input matInput type="text" placeholder="Email Id" formControlName="email" (input)="verifyEmail($event)"
-              required />
-            <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
-              class="form-error-msg"> Email is required </small>
-            <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
-              class="form-error-msg"> Enter Valid Email</small>
-            <small class="form-error-msg" *ngIf="(!emailVerified)">Email already in use.</small>
-          </mat-form-field>
-        </div>
-
-        <!-- Phone Number and Code -->
-        <div class="col-md-3 col-sm-4 col-xs-5">
-          <mat-form-field class="border-select mat-form-field-flex-mm-padding">
-            <mat-select formControlName="countriesList">
-              <div class="display-flex">
-                <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
-                  [(ngModel)]="searchCountry" [ngModelOptions]="{standalone: true}"
-                  (keydown)="$event.stopPropagation()" />
-                <button mat-button matSuffix mat-icon-button>
-                  <mat-icon>search</mat-icon>
-                </button>
-              </div>
-              <mat-select-trigger>
-                <span
-                  matTooltip="{{ selectedCountry && selectedCountry.countryCode }} {{ selectedCountry && selectedCountry.callingCode }}"><img
-                    class="w-30 p-r-4" [src]="selectedCountry && selectedCountry.imageUrl" alt="" />
-                  <span class="p-r-5 font-size12">{{ selectedCountry && selectedCountry.countryCode }}</span>
-                  <span class="font-size12 text-semi-bold">{{ selectedCountry && selectedCountry.callingCode }}</span>
-                </span>
-              </mat-select-trigger>
-              <mat-option
-                *ngFor="let country of countryList | SearchPipe: searchCountry:['name', 'countryCode', 'callingCode']"
-                [value]="country" selected="trade.isAttatched"><span><img class="width17Percent p-r-10"
-                    [src]="country.imageUrl" alt="" />
-                  <span matTooltip="{{ country.name }}"
-                    class="limited-character universal p-r-5">{{ country.name }}</span>
-                  <span class="text-semi-bold color-grey">{{ country.callingCode }}</span>
-                </span>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <!-- Phone Number -->
-        <div class="col-md-9 col-sm-8 col-xs-7">
-          <mat-form-field class="border-input add-edit-user-form-modal">
-            <input matInput type="text" placeholder="Phone No" formControlName="contactNo" />
-            <small *ngIf="form.controls['contactNo'].hasError('pattern') && form.controls['contactNo'].touched"
-              class="form-error-msg"> Enter Valid Phone No</small>
-          </mat-form-field>
-        </div>
-
-        <!-- Role Field -->
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <mat-form-field class="border-select add-edit-user-form-modal">
-            <mat-label>Role *</mat-label>
-            <mat-select formControlName="roleId">
-              <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
-                {{role.roleDescription}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <!-- Project Dropdown Field -->
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <mat-form-field class="border-select add-edit-user-form-modal">
-            <mat-label>Project</mat-label>
-            <mat-select formControlName="projectIds" multiple>
-              <mat-option *ngFor="let project of allProjects" [value]="project.projectId">{{project.projectName}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+        <div mat-dialog-actions>
+          <div class="col-xs-12 col-sm-12 save-btn-add-edit-user-modal" [ngClass]="isMobile ? 'sm-btn1' : '' ">
+            <button mat-raised-button [disabled]="!form.valid || !emailVerified" (click)="userDetailsNavigate()"
+              class="main-background-color main-button color-white pull-right">
+              <span *ngIf="!data.isEdit">Add</span>
+              <span *ngIf="data.isEdit">Save</span>
+            </button>
+          </div>
         </div>
       </div>
 
-      <div mat-dialog-actions>
-        <div class="col-xs-12 col-sm-12 save-btn-add-edit-user-modal" [ngClass]="isMobile ? 'sm-btn1' : '' ">
-          <button mat-raised-button [disabled]="!form.valid || !emailVerified" (click)="userDetailsNavigate()"
-            class="main-background-color main-button color-white pull-right">
-            <span *ngIf="!data.isEdit">Add</span>
-            <span *ngIf="data.isEdit">Save</span>
-          </button>
-        </div>
-      </div>
     </div>
-
   </form>
-</div>
+</section>
